footer-nav links can now wrap + hover bug fix on macOS

--- a/phalcon/css/core.css
+++ b/phalcon/css/core.css
@@ -1345,6 +1345,7 @@ input:focus {
 
 .footer-nav {
   margin: 0 auto;
+  max-width: 100%;
   color: #000;
   display: -webkit-box;
   display: -webkit-flex;
@@ -1354,12 +1355,16 @@ input:focus {
   -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
   margin-bottom: 20px; }
   .footer-nav li {
-    margin-right: 30px;
+    margin: 0 15px;
     -webkit-transition: .135s;
     -o-transition: .135s;
-    transition: .135s; }
+    transition: .135s;
+    border-bottom: 1px solid transparent; }
     .footer-nav li:last-child {
       margin-right: 0; }
     .footer-nav li a {
@@ -1368,8 +1373,7 @@ input:focus {
       -webkit-transition: .135s;
       -o-transition: .135s;
       transition: .135s;
-      -webkit-box-shadow: 0px 1px 0px 0px black;
-              box-shadow: 0px 1px 0px 0px black; }
+      border-bottom: 1px solid #000; }
 
 .footer__license {
   text-align: center;
